--- a/PP09.Inheritance/PP09.Inheritance.vcxproj.filters
+++ b/PP09.Inheritance/PP09.Inheritance.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TextureManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameObject.h">
@@ -36,6 +39,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Game.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TextreManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
