--- a/PP09.Inheritance/PP09.Inheritance.vcxproj.filters
+++ b/PP09.Inheritance/PP09.Inheritance.vcxproj.filters
@@ -41,7 +41,7 @@
     <ClInclude Include="Game.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="TextreManager.h">
+    <ClInclude Include="TextureManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
