--- a/PP09.Inheritance/PP09.Inheritance.vcxproj
+++ b/PP09.Inheritance/PP09.Inheritance.vcxproj
@@ -132,7 +132,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="TextreManager.h" />
+    <ClInclude Include="TextureManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
